[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "smoke-test"
path = "src/smoke-test/main.rs"

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }

