[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "smoke-test"
path = "src/smoke-test/main.rs"

[[bin]]
name = "prime-time"
path = "src/prime-time/main.rs"

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
primes = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }

